--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -254,7 +254,7 @@ https://www.lhboi.name.vn/kinh-nghiem/may-tinh/gnucash
 <p>Tôi dùng chương trình <a href="https://www.gnucash.org/" target="_blank">GnuCash</a> để quản lý tiền và tài sản của gia đình.</p>
 <div><div class="inlineleft"><a href="https://www.gnucash.org/" target='_blank'><amp-img alt="gnucash" height="19" src="/images/gnucashbanner5df44.png" width="100" height="19" layout="fixed"></amp-img></a></div>
  GnuCash là phần mềm mã nguồn mở, chạy được trên Linux lẫn Windows. Có một bản GnuCash cho Android, đó là phương tiện ghi chép các giao dịch, cuối ngày hay cuối tuần chuyển các ghi chép đó sang GnuCash trên computer. GnuCash giúp quản lý bốn thứ chính là: tài sản, nợ, thu nhập, chi tiêu của gia đình. Bốn khoản chính trên được chia thành nhiều tài khoản để quản lý cụ thể từng món nhỏ, ví dụ tiền trong bóp, tài khoản thanh toán, sổ tiết kiệm, cổ phiếu, tài sản, chi ăn uống, chi điện nước, tiền lương, tiền lãi tiết kiệm… Mỗi tài khoản có một mã số để có thể phân biệt chính xác những tài khoản con có tên giống nhau.</div>
-<p>Trong chương trình GnuCash, tôi đã tạo các tài khoản để quản lý các món tiền nằm trong tài khoản thanh toán 312, sổ tiết kiệm ở ngân hàng 314, và tiền mặt trong bóp (ví) 311. Tôi tạo tiếp những tài khoản con có mã tài khoản 11, 12, 13, 15 dưới tài khoản Chi tiêu trong GnuCash để ghi các khoản chi 1, 2, 3, 5 như trong bài <a href="/huu-ich/chi-tieu.html">Tự do tài chính</a>. Đối với những món tiền để dành lâu năm như khoản 4 và 6 trong bài đó thì cần <a href="/huu-ich/hieu-qua-dau-tu.html">đánh giá hiệu quả đầu tư</a> nên được ghi vào một file spreadsheet, gọi là <a href="../../huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html">Đầu tư dài hạn</a>.</p>
+<p>Trong chương trình GnuCash, tôi đã tạo các tài khoản để quản lý các món tiền nằm trong tài khoản thanh toán 312, sổ tiết kiệm ở ngân hàng 314, và tiền mặt trong bóp (ví) 311. Tôi tạo tiếp những tài khoản con có mã tài khoản 11, 12, 13, 15 dưới tài khoản Chi tiêu trong GnuCash để ghi các khoản chi 1, 2, 3, 5 như trong bài <a href="/huu-ich/chi-tieu">Tự do tài chính</a>. Đối với những món tiền để dành lâu năm như khoản 4 và 6 trong bài đó thì cần <a href="/huu-ich/hieu-qua-dau-tu">đánh giá hiệu quả đầu tư</a> nên được ghi vào một file spreadsheet, gọi là <a href="../../huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Đầu tư dài hạn</a>.</p>
 <div><amp-img alt="Tài khoản trong GnuCash" src="/images/tai-khoan.png" width="899" height="776" layout="responsive"></amp-img></div>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -282,10 +282,10 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<p>Tiếp theo tôi tạo ngân sách trong GnuCash cho các khoản chi đó, nhập các số tiền  theo <a href="/huu-ich/ke-hoach-tai-chinh/khtcp1.html">tỉ lệ đã định</a> vào trong tab <i>Ngân sách: Ngân sách tháng</i>.</p>
+<p>Tiếp theo tôi tạo ngân sách trong GnuCash cho các khoản chi đó, nhập các số tiền  theo <a href="/huu-ich/ke-hoach-tai-chinh/khtcp1">tỉ lệ đã định</a> vào trong tab <i>Ngân sách: Ngân sách tháng</i>.</p>
 <div><amp-img alt="Ngân sách trong GnuCash" src="/images/budget.png" width="1058" height="772" layout="responsive"></amp-img></div>
 <p>Giả sử khi năm triệu đồng tiền lương được chuyển vào tài khoản ở ngân hàng, tôi ghi một dòng vào GnuCash rằng đã thu được năm triệu đồng tiền lương.
-<br>Tiếp theo, tôi trích một phần tiền ứng với khoản chi 4 và 6 từ tài khoản thanh toán ở ngân hàng sang khoản chi Đầu tư để gửi bảo hiểm nhân thọ, mua cổ phiếu, <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a>, sau đó ghi thêm một dòng vào file <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html">Đầu tư dài hạn</a> ứng với việc trích tiền đó. Kết quả: tài khoản thanh toán ở ngân hàng giảm, các tài sản trong Đầu tư dài hạn tăng.</p>
+<br>Tiếp theo, tôi trích một phần tiền ứng với khoản chi 4 và 6 từ tài khoản thanh toán ở ngân hàng sang khoản chi Đầu tư để gửi bảo hiểm nhân thọ, mua cổ phiếu, <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>, sau đó ghi thêm một dòng vào file <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Đầu tư dài hạn</a> ứng với việc trích tiền đó. Kết quả: tài khoản thanh toán ở ngân hàng giảm, các tài sản trong Đầu tư dài hạn tăng.</p>
 <p>Khi chi tiêu cho các khoản 1, 2, 3, 5, số tiền trong bóp hoặc/và trong tài khoản thanh toán ở ngân hàng giảm xuống.</p>
 <p>Thỉnh thoảng, số tiền thực trong bóp lệch một chút so với số trong GnuCash, do các khoản chi vặt không được ghi thì ghi khoản chênh lệch vào tài khoản chi Linh tinh 17.</p>
 <p>Đối với khoản chi 4, đây là khoản chi lớn nên tôi phải rút từ tài sản đầu tư để chi. Giả sử tôi rút từ quỹ đầu tư 15 triệu đồng để mua máy chụp hình giá 13 triệu đồng, 2 triệu đồng còn dư cất vào tài khoản thanh toán, tôi sẽ ghi vào trong file Đầu tư dài hạn rằng rút 15 triệu đồng và ghi trong file Giadinh.gnucash chuyển 13 triệu đồng từ tài khoản con Thu nhập.Đầu tư sang tài khoản Chi tiêu lớn 14 và chuyển 2 triệu đồng từ tài khoản Thu nhập.Đầu tư sang tài khoản thanh toán 312.</p>
@@ -319,14 +319,14 @@ data-ad-slot="3830899615">
 <p>GnuCash có rất nhiều kiểu báo cáo để tôi biết tiền mình kiếm được từ đâu, dùng hết bao nhiêu, còn lại bao nhiêu…
 <br>Giả sử do quá cần gấp mà bạn chi lố kế hoạch thì GnuCash sẽ báo cáo rằng ngân sách đã bị âm. Khi đó bạn hãy cố gắng kiềm chế chi tiêu khoản đó cho đến khi lấp đầy khoản âm đó.
 <br>Hãy cố gắng chi tiêu sao cho ngân sách đừng bị âm và cũng đừng quá gần số 0 vì bạn luôn luôn cần phải chi những món bất ngờ. Phải để đủ tiền cho những bất ngờ đó.
-<br>Hãy <a href="bat-dau-gnucash.html">bắt đầu</a> dùng GnuCash!</p>
+<br>Hãy <a href="bat-dau-gnucash">bắt đầu</a> dùng GnuCash!</p>
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="/huu-ich/chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
-<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html">Ghi sổ các khoản đầu tư dài hạn</a>
-<br>* <a href="bat-dau-gnucash.html">Hướng dẫn bắt đầu dùng GnuCash</a>
+<br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Ghi sổ các khoản đầu tư dài hạn</a>
+<br>* <a href="bat-dau-gnucash">Hướng dẫn bắt đầu dùng GnuCash</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133596398413393920" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376820392483575" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
