--- a/kinh-nghiem/may-tinh/ham-tai-chinh.html
+++ b/kinh-nghiem/may-tinh/ham-tai-chinh.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -248,7 +248,7 @@ https://www.lhboi.name.vn/kinh-nghiem/may-tinh/ham-tai-chinh
 <p>PV tính số tiền cần đầu tư để có thể rút ra một số tiền bằng nhau ở các thời điểm cách đều nhau khi biết trước lãi suất không đổi trong suốt thời gian đầu tư.</p>
 <p>Ví dụ: tính số tiền cần có khi con bạn bắt đầu học đại học sao cho có thể rút ra 120 triệu đồng mỗi năm trong 5 năm, phần còn lại gửi tiết kiệm lãi suất 7%/năm, sau 5 năm đó vẫn còn lại 50 triệu đồng để mua sắm cho con chuẩn bị bắt đầu đi làm.
 <br>Kết quả PV(7%;5;120.000.000;50.000.000;1)=-562.114.659,75₫.
-<br>Kết quả này khác xa con số 650.000.000₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han.html">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu.html">đầu tư</a> không?
+<br>Kết quả này khác xa con số 650.000.000₫ (5*120.000.000+50.000.000). Khác xa như vậy nhờ tận dụng việc đầu tư, đầu tư càng <a href="/huu-ich/tich-luy-dai-han">dài hạn</a> thì kết quả càng cách xa, bạn có tận dụng việc <a href="/huu-ich/cach-dau-tu">đầu tư</a> không?
 <br>Dấu trừ trong kết quả có nghĩa là ta phải xuất số tiền đó ra vào đầu năm thứ 1.</p>
  
 <h3>PMT Payment</h3>
@@ -256,7 +256,7 @@ https://www.lhboi.name.vn/kinh-nghiem/may-tinh/ham-tai-chinh
 <p>Ví dụ: tính số tiền cần góp hàng tháng sao cho sau 18 năm, từ 10 triệu đồng ban đầu, với lãi suất 7%/năm sẽ có được số tiền tính ra ở ví dụ trên.
 <br>Kết quả PMT(7%/12;18*12;-10.000.000;562.114.659,75;1)=-1.216.409,13₫
 <br>Dấu trừ ở số 10 triệu và kết quả có nghĩa là ta phải xuất số tiền đó ra.</p>
-<p>Mỗi ngày <a href="/huu-ich/chi-tieu.html">tiết kiệm</a> khoảng 40 ngàn đồng, sau 18 năm sẽ có được một số tiền hơn nửa tỉ đồng cho con học đại học tốt. Có thể tiết kiệm được 40 ngàn đồng mỗi ngày bằng cách nấu đồ ăn sáng ở nhà thay vì cả gia đình đi ăn tiệm. Nếu nấu đồ ăn đem theo ăn trưa ở chỗ làm thì sẽ <a href="/huu-ich/tich-luy.html">tích luỹ</a> được nhiều hơn nữa.</p>
+<p>Mỗi ngày <a href="/huu-ich/chi-tieu">tiết kiệm</a> khoảng 40 ngàn đồng, sau 18 năm sẽ có được một số tiền hơn nửa tỉ đồng cho con học đại học tốt. Có thể tiết kiệm được 40 ngàn đồng mỗi ngày bằng cách nấu đồ ăn sáng ở nhà thay vì cả gia đình đi ăn tiệm. Nếu nấu đồ ăn đem theo ăn trưa ở chỗ làm thì sẽ <a href="/huu-ich/tich-luy">tích luỹ</a> được nhiều hơn nữa.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -325,25 +325,25 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <h3>XIRR</h3>
-<p>Các hàm trên tính trong trường hợp lãi suất, chu kỳ, số tiền tiết kiệm hoặc trả nợ không đổi trong suốt thời gian. Trong thực tế thì mọi thứ đều có thể thay đổi. Ví dụ bạn <a href="/huu-ich/dung-so-dau-tu.html">đầu tư</a> hoặc gửi tiền tiết kiệm không đều, có tháng gửi nhiều, có tháng gửi ít, có tháng gửi sớm, có tháng gửi trễ, sau 5 năm bạn thu lại được một số tiền. Hỏi lãi suất trung bình trong suốt 5 năm đó là bao nhiêu? Không thể lấy trung bình cộng của lãi suất tiết kiệm. Nếu không phải là gửi tiền tiết kiệm mà mua đơn vị <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> thì tính như thế nào?
+<p>Các hàm trên tính trong trường hợp lãi suất, chu kỳ, số tiền tiết kiệm hoặc trả nợ không đổi trong suốt thời gian. Trong thực tế thì mọi thứ đều có thể thay đổi. Ví dụ bạn <a href="/huu-ich/dung-so-dau-tu">đầu tư</a> hoặc gửi tiền tiết kiệm không đều, có tháng gửi nhiều, có tháng gửi ít, có tháng gửi sớm, có tháng gửi trễ, sau 5 năm bạn thu lại được một số tiền. Hỏi lãi suất trung bình trong suốt 5 năm đó là bao nhiêu? Không thể lấy trung bình cộng của lãi suất tiết kiệm. Nếu không phải là gửi tiền tiết kiệm mà mua đơn vị <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> thì tính như thế nào?
 <br>Hàm XIRR sẽ giúp bạn tính lãi suất trung bình của quá trình đầu tư đó.
 <br>XIRR(cashflow_amounts, cashflow_dates, rate_guess)</p>
 <p>Hãy nhập vào spreadsheet hai cột số liệu ví dụ cột A là ngày đầu tư, cột B là số tiền đầu tư (số âm), mỗi lần đầu tư ghi một dòng, từ dòng 2 đến dòng 61. Dòng 62 ghi ngày và tổng số tiền thu lại được.
 <br>XIRR(B2:B62;A2:A62;0,1) sẽ cho biết lãi suất trung bình của quá trình đầu tư này.<br>
-Các bạn có thể chép file spreadsheet mẫu <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han.html">Đầu tư dài hạn</a> để bắt đầu ghi chép các khoản tích luỹ lâu năm.</p>
+Các bạn có thể chép file spreadsheet mẫu <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Đầu tư dài hạn</a> để bắt đầu ghi chép các khoản tích luỹ lâu năm.</p>
 
 <h3>Kế hoạch tài chính</h3>
 <p>Để tính PMT, FV, PV trong trường hợp số tiền tăng dần theo thời giá thì hãy dùng bảng tính <a href="/huu-ich/ke-hoach-tai-chinh/">KHTC</a>.</p>
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="/huu-ich/chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="/huu-ich/chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
 <br>* <a href="/huu-ich/ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="/huu-ich/tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="/huu-ich/tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
-<br>* <a href="/huu-ich/cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="/huu-ich/dung-so-dau-tu.html">Đừng sợ đầu tư</a>
+<br>* <a href="/huu-ich/tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="/huu-ich/tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="/huu-ich/cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="/huu-ich/dung-so-dau-tu">Đừng sợ đầu tư</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1133599150967103493" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/587261241439488" rel="nofollow" target="_blank">Facebook</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
