--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -161,8 +161,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -184,7 +184,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -223,17 +223,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='protect.html'>Bảo-vệ tài-sản-số-hoá</a></dt>
-  <dt><a href='cloudstorage.html'>Kinh-nghiệm dùng cloud storage</a></dt>
-  <dt><a href='privcloudstor.html'>Hướng-dẫn làm cloud storage server</a></dt>
-  <dt><a href='pi-network.html'>Tiền-mật-mã Pi</a></dt>
-  <dt><a href='cryptocurrency.html'>Tìm-hiểu Bitcoin</a></dt>
-  <dt><a href="/kinh-nghiem/may-tinh/vi-dien-tu.html">Nhận-xét các ví-điện-tử</a></dt>
-  <dt><a href='gnucash.html'>GnuCash</a></dt>
-  <dt><a href='bat-dau-gnucash.html'>Bắt-đầu dùng GnuCash</a></dt>
-  <dt><a href='ham-tai-chinh.html'>Các phép-tính-tài-chính cần biết</a></dt>
-  <dt><a href='googlemaps.html'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
-  <dt><a href='spam-call.html'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
+  <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
+  <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
+  <dt><a href='privcloudstor'>Hướng-dẫn làm cloud storage server</a></dt>
+  <dt><a href='pi-network'>Tiền-mật-mã Pi</a></dt>
+  <dt><a href='cryptocurrency'>Tìm-hiểu Bitcoin</a></dt>
+  <dt><a href="vi-dien-tu">Nhận-xét các ví-điện-tử</a></dt>
+  <dt><a href='gnucash'>GnuCash</a></dt>
+  <dt><a href='bat-dau-gnucash'>Bắt-đầu dùng GnuCash</a></dt>
+  <dt><a href='ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a></dt>
+  <dt><a href='googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a></dt>
+  <dt><a href='spam-call'>Chặn những cuộc-gọi-tiếp-thị</a></dt>
   <dt><a href='spam'>Những cách chặn spam mail</a></dt>
   <dt><a href='raspberrypi'>RaspberryPi</a></dt>
   <dt><a href='toys'>Home server cũ</a></dt>
