--- a/kinh-nghiem/may-tinh/privcloudstor.html
+++ b/kinh-nghiem/may-tinh/privcloudstor.html
@@ -168,8 +168,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -184,7 +184,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -594,7 +594,7 @@ Chi phí sử dụng cloud storage server này chỉ gồm tiền điện server
 <br>Chú ý: máy desktop hao điện hơn máy laptop rất nhiều, có thể hao gấp 3-5 lần.
 
 <hr>
-Nếu không tìm được một máy laptop cũ để làm cloud storage server, bạn cũng có thể mua một máy tính nhỏ như <a href="raspberrypi.html">RaspberryPi</a>. RaspberryPi dùng SD card thay cho đĩa cứng chứa hệ điều hành, và bạn có thể gắn thêm đĩa cứng ngoài qua USB để chứa file.
+Nếu không tìm được một máy laptop cũ để làm cloud storage server, bạn cũng có thể mua một máy tính nhỏ như <a href="raspberrypi">RaspberryPi</a>. RaspberryPi dùng SD card thay cho đĩa cứng chứa hệ điều hành, và bạn có thể gắn thêm đĩa cứng ngoài qua USB để chứa file.
 
 
   <hr>
