--- a/kinh-nghiem/may-tinh/protect.html
+++ b/kinh-nghiem/may-tinh/protect.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -276,7 +276,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <h2>Chống rủi ro hư hoặc mất</h2>
-<p>Những tài sản số hoá do cá nhân tự giữ trong thẻ nhớ, USB drive, ổ đĩa cứng… có thể bị hư hoặc mất. Để phòng ngừa hư và mất thì chúng ta chép các file đó ra nhiều nơi, nhưng chép ra nhiều nơi rồi thì chúng ta phải nhớ nơi nào chứa file mới nhất, nơi nào cũ hơn. Cách tiện lợi nhất bây giờ là để cho file tự động được chép vào đám mây, các dịch vụ đám mây tự động giữ nhiều version của từng file từ cũ đến mới nhất. Chúng ta có thể dùng các dịch vụ <a href="cloudstorage.html">cloud storage</a> miễn phí, hoặc có trả tiền hàng tháng hay hàng năm, hoặc trả tiền một lần để dùng mãi mãi, hoặc chúng ta <a href="privcloudstor.html">tự tạo một cloud storage</a> để dùng.
+<p>Những tài sản số hoá do cá nhân tự giữ trong thẻ nhớ, USB drive, ổ đĩa cứng… có thể bị hư hoặc mất. Để phòng ngừa hư và mất thì chúng ta chép các file đó ra nhiều nơi, nhưng chép ra nhiều nơi rồi thì chúng ta phải nhớ nơi nào chứa file mới nhất, nơi nào cũ hơn. Cách tiện lợi nhất bây giờ là để cho file tự động được chép vào đám mây, các dịch vụ đám mây tự động giữ nhiều version của từng file từ cũ đến mới nhất. Chúng ta có thể dùng các dịch vụ <a href="cloudstorage">cloud storage</a> miễn phí, hoặc có trả tiền hàng tháng hay hàng năm, hoặc trả tiền một lần để dùng mãi mãi, hoặc chúng ta <a href="privcloudstor">tự tạo một cloud storage</a> để dùng.
 </p>
 
 <h2>Đề phòng rủi ro mất trộm</h2>
@@ -340,7 +340,7 @@ data-ad-slot="3830899615">
 </p>
 <p>Các thông tin trong KeePass được sắp xếp thành nhiều nhóm, ví dụ như nhóm công việc, nhóm ngân hàng, nhóm giải trí, nhóm mua sắm… Các thông tin ghi trong file KeePass đều được mã hoá bằng password của file nên dù kẻ gian có chép được file và đọc từng byte trong file đó cũng không thể thấy được những gì ghi trong đó. KeePass có một password generator để tạo ra những password khó đoán để bạn dùng ở những server có yêu cầu cao, tôi tin rằng các password đó là không thể đoán được và cũng không thể nhớ được, để dùng những password đó bạn chỉ có cách mở KeePass ra và copy rồi paste. KeePass giữ lại lịch sử những lần đổi password.
 </p>
-<p>Tôi đang dùng phần mềm KeePass để giữ tất cả thông tin như vậy. Để tiện dùng những thông tin đó mọi lúc và mọi nơi, tôi để file KeePass của tôi trong một <a href="cloudstorage.html">cloud storage</a> và đồng bộ nó về máy tính cũng như smartphone. Mặc dù để file KeePass trong Internet nhưng tôi không lo ngại gì hết vì kẻ gian phải qua hai lớp khoá mới lấy được file đó: password của cloud storage và password của file đó (ai mà biết được tôi thích câu thơ nào).
+<p>Tôi đang dùng phần mềm KeePass để giữ tất cả thông tin như vậy. Để tiện dùng những thông tin đó mọi lúc và mọi nơi, tôi để file KeePass của tôi trong một <a href="cloudstorage">cloud storage</a> và đồng bộ nó về máy tính cũng như smartphone. Mặc dù để file KeePass trong Internet nhưng tôi không lo ngại gì hết vì kẻ gian phải qua hai lớp khoá mới lấy được file đó: password của cloud storage và password của file đó (ai mà biết được tôi thích câu thơ nào).
 </p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -376,7 +376,7 @@ data-ad-slot="3830899615">
 <li>Bạn nhận được một email từ một <i>người quen</i>, trong email đó có một file tài liệu hay hình ảnh, bạn mở file đó ra, thế là một malware vào nằm trong máy của bạn.</li>
 </ul>
 <p>Để tránh bị lừa thì bạn hãy bình tĩnh đọc kỹ những thông báo nhận được, và tránh cài những phần mềm không rõ nguồn gốc (phần mềm đã crack), cân nhắc cẩn thận khi mở những file đính kèm email.
-<br>Bạn cũng nên nhớ rằng <b>không bao giờ</b> gõ password của mình ở máy của người khác. Lý do là bạn không thể biết chắc rằng máy đó không có malware trộm password. Khi tôi cần dùng máy ở tiệm in, tôi luôn luôn chuẩn bị sẵn những thứ cần in thành các file pdf, và để các file đó trong một <a href="cloudstorage.html">cloud storage</a> mà không cần password.
+<br>Bạn cũng nên nhớ rằng <b>không bao giờ</b> gõ password của mình ở máy của người khác. Lý do là bạn không thể biết chắc rằng máy đó không có malware trộm password. Khi tôi cần dùng máy ở tiệm in, tôi luôn luôn chuẩn bị sẵn những thứ cần in thành các file pdf, và để các file đó trong một <a href="cloudstorage">cloud storage</a> mà không cần password.
 </p>
 <p>Một trường hợp bị mất password khác là server dịch vụ bị hacker xâm nhập và lấy hàng loạt thông tin người dùng, bao gồm tên tài khoản, địa chỉ email, password… Bạn có thể đến trang web <a href="https://haveibeenpwned.com/" target=' blank'>have i been pwned?</a> dò xem những địa chỉ email nào của bạn đã bị lộ tại những dịch vụ nào.
 <p>Và bạn hãy luôn luôn dùng lớp bảo vệ thứ hai (được giải thích <a href="#twofactor">dưới đây</a>) để khỏi bị mất tài khoản khi password đã bị trộm mất.</p>
@@ -455,7 +455,7 @@ data-ad-slot="3830899615">
 <br>Phần mềm của dịch vụ sẽ liên lạc với đầu đọc vân tay (có sẵn trong máy hoặc nối với máy tính qua USB hoặc Bluetooth) để đọc vân tay của người dùng trước khi bắt đầu giao dịch.
 </p>
 <div class="flright"><div class="right">Hình từ <a href="https://www.theverge.com/2019/2/22/18235173/the-best-hardware-security-keys-yubico-titan-key-u2f" target=' blank'>TheVerge.com</a></div><amp-img alt="Fido keys" src="/images/fidokey.png" width="452" height="254" layout="responsive"></amp-img></div>
-<p>Authenticator là một máy mã hoá nhỏ như cái móng tay. Nó chứa chìa khoá riêng (private key) của người dùng trong cặp chìa khoá public-key cryptography đã đăng ký với server của dịch vụ. Mỗi khi người dùng login vào dịch vụ thì server dịch vụ gửi đến máy của người dùng một chuỗi thử thách (challenge), máy của người dùng giao chuỗi thử thách đó cho authenticator qua USB hoặc NFC hoặc Bluetooth, authenticator <a href="cryptocurrency.html">ký</a> chuỗi thử thách bằng private key rồi gửi trở lại server, server dùng public key của người dùng để kiểm xem chữ ký đó có khớp không. Private key của người dùng không bao giờ xuất hiện bên ngoài authenticator nên không sợ bị lộ. Authenticator có thể chứa vô số private key nên một người dùng với một authenticator có thể tạo tài khoản ở vô số dịch vụ, nhiều tài khoản ở cùng một dịch vụ. Authenticator đang dần trở nên phổ biến, đến một lúc nào đó người ta không cần password ở mọi nơi.
+<p>Authenticator là một máy mã hoá nhỏ như cái móng tay. Nó chứa chìa khoá riêng (private key) của người dùng trong cặp chìa khoá public-key cryptography đã đăng ký với server của dịch vụ. Mỗi khi người dùng login vào dịch vụ thì server dịch vụ gửi đến máy của người dùng một chuỗi thử thách (challenge), máy của người dùng giao chuỗi thử thách đó cho authenticator qua USB hoặc NFC hoặc Bluetooth, authenticator <a href="cryptocurrency">ký</a> chuỗi thử thách bằng private key rồi gửi trở lại server, server dùng public key của người dùng để kiểm xem chữ ký đó có khớp không. Private key của người dùng không bao giờ xuất hiện bên ngoài authenticator nên không sợ bị lộ. Authenticator có thể chứa vô số private key nên một người dùng với một authenticator có thể tạo tài khoản ở vô số dịch vụ, nhiều tài khoản ở cùng một dịch vụ. Authenticator đang dần trở nên phổ biến, đến một lúc nào đó người ta không cần password ở mọi nơi.
 <br>Biện pháp này chặt chẽ như vậy nhưng cũng không bảo vệ tuyệt đối được. Đã có trường hợp trong khi ngủ chủ tài khoản bị người cùng nhà dùng đầu ngón tay để thực hiện giao dịch chuyển tiền đi mất. Trong trường hợp không tin tưởng người cùng nhà thì nên tắt hoặc cất smartphone vào trong két sắt khi đi ngủ.
 </p>
 <!-- AMP In-article 1 -->
@@ -513,7 +513,7 @@ Chép ở máy POS: những cửa hàng gian lận sẽ dùng máy đọc thẻ 
 </ul>
 Có trường hợp nhân viên tính tiền ở cửa hàng cố nhớ hết thông tin trên hai mặt thẻ rồi sau đó ghi lại vào sổ tay, rồi dùng thông tin đó để mua hàng online ở những cửa hàng không kiểm soát chặt.
 
-<p>Ngoài tài khoản ngân hàng, tôi còn có <a href="vi-dien-tu.html">ví tiền điện tử</a>, tài khoản đầu tư <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a>.</p>
+<p>Ngoài tài khoản ngân hàng, tôi còn có <a href="vi-dien-tu">ví tiền điện tử</a>, tài khoản đầu tư <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
