--- a/kinh-nghiem/may-tinh/raspberrypi-2.html
+++ b/kinh-nghiem/may-tinh/raspberrypi-2.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -285,7 +285,7 @@ data-ad-slot="3830899615">
 <li>phía trước Raspberry Pi là lỗ cắm analog video và audio</li></ul>
 <p>Hai dây USB được hàn theo dạng chữ Y để vừa nối thiết bị USB vào Raspberry Pi vừa cấp điện 5V cho Raspberry Pi. Một dây nối thường trực đến ổ đĩa cứng 120GB và nguồn 5V từ adapter DTech (phía bên phải trong hình), dây thứ hai lấy nguồn 5V từ charger (cắm trên ổ cắm Lioa ở giữa hình) và sẵn sàng để cắm một ổ đĩa cứng chứa phim.</p>
 <p>Trước khi quyết định dùng USB ⇔ SATA/PATA bridge DTech 8003A, tôi đã thử dock cho 2 ổ đĩa cứng SATA <a href="https://www.unitek-products.com/en/product_detail.php?id=58" rel="nofollow" target="_blank">Unitek Y-2041</a>, trông nó gọn đẹp hơn DTech nhưng nó có một lỗi nặng là khi tháo hay gắn một ổ đĩa cứng thì ổ đĩa cứng đang làm việc ở ngăn kia bị reset.</p>
-<div class="center">sang trang <a href="raspberrypi.html">1</a> - 2</div>
+<div class="center">sang trang <a href="raspberrypi">1</a> - 2</div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/602325189780868" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
