--- a/kinh-nghiem/may-tinh/raspberrypi.html
+++ b/kinh-nghiem/may-tinh/raspberrypi.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -242,7 +242,7 @@ https://www.lhboi.name.vn/kinh-nghiem/may-tinh/raspberrypi
     </amp-facebook-like>
   </div>
 
-<p>Hệ thống giải trí nhạc và phim gia đình tôi vừa mới có thêm một thành phần. Đó là máy phát nhạc và phim được làm theo kiểu của <i>người thích tự làm</i> và <a href="/huu-ich/tich-luy.html">tiết kiệm</a>. Máy phát này được làm từ một cái máy tính nhỏ xíu là <a href="https://www.raspberrypi.org/faqs" target="_blank">Raspberry Pi</a> và phần mềm <a href="https://www.raspbmc.com/wiki/user/" target="_blank">RaspBMC</a> (dựa trên hệ điều hành Linux).
+<p>Hệ thống giải trí nhạc và phim gia đình tôi vừa mới có thêm một thành phần. Đó là máy phát nhạc và phim được làm theo kiểu của <i>người thích tự làm</i> và <a href="/huu-ich/tich-luy">tiết kiệm</a>. Máy phát này được làm từ một cái máy tính nhỏ xíu là <a href="https://www.raspberrypi.org/faqs" target="_blank">Raspberry Pi</a> và phần mềm <a href="https://www.raspbmc.com/wiki/user/" target="_blank">RaspBMC</a> (dựa trên hệ điều hành Linux).
 <br>Trước khi dùng Raspberry Pi làm máy phát phim, tôi vẫn dùng máy tính để bàn với CPU AMD Phenom II X3 710 với chip màn hình ATI Radeon HD 3200 để xem phim HD. Tôi chú ý đến Raspberry Pi vì nó:
 <ol><li>nhỏ, ít hao điện,</li>
 <li>có chip màn hình giải nén phim HD,</li>
@@ -284,7 +284,7 @@ data-ad-slot="3830899615">
 <ul><li>một bộ loa stereo 2.1 làm front left, front right và sub-woofer</li>
 <li>2 loa trong TV làm center</li>
 <li>một bộ loa stereo làm surround left và surround right</li></ul>
-<div class="center">sang trang 1 - <a href="raspberrypi-2.html">2</a></div>
+<div class="center">sang trang 1 - <a href="raspberrypi-2">2</a></div>
 <div class="todiscuss">Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://www.facebook.com/boi.hong.le/posts/602325189780868" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
