--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -168,8 +168,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -184,7 +184,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -242,7 +242,7 @@ https://www.lhboi.name.vn/kinh-nghiem/may-tinh/spam-call
     </amp-facebook-like>
   </div>
 
-  <p>Xã hội hiện đại đem đến cho người ta nhiều tiện nghi và cả những phiền toái. Khi những tiện nghi bị người này lạm dụng thì nó trở thành sự phiền toái của người khác ngay. Email dùng để thông tin với nhau, lạm dụng email thì gây ra sự phiền toái của <a href="spam.html">spam mail</a>. Khi điện thoại trở nên phổ biến thì người ta lạm dụng nó để ép thông tin tiếp thị đến bất kỳ người nào có điện thoại, không phải một lần mà lặp lại nhiều lần.</p>
+  <p>Xã hội hiện đại đem đến cho người ta nhiều tiện nghi và cả những phiền toái. Khi những tiện nghi bị người này lạm dụng thì nó trở thành sự phiền toái của người khác ngay. Email dùng để thông tin với nhau, lạm dụng email thì gây ra sự phiền toái của <a href="spam">spam mail</a>. Khi điện thoại trở nên phổ biến thì người ta lạm dụng nó để ép thông tin tiếp thị đến bất kỳ người nào có điện thoại, không phải một lần mà lặp lại nhiều lần.</p>
   <p>Ở Việt Nam hiện nay, người dùng điện thoại thường bị làm phiền bởi các dịch vụ ngân hàng (mời làm thẻ tín dụng, mời vay tiền, mời gửi tiết kiệm), bất động sản, đầu tư cổ phiếu nước ngoài, bảo hiểm nhân thọ… Các dịch vụ khác cũng làm phiền ở mức độ thấp hơn là khách sạn, nhà hàng, rượu, thiết kế web. Ngoài ra còn phải kể đến những kẻ lừa đảo như bán mật ong rừng, thông báo trúng thưởng…</p>
   <h1>Tại sao chúng ta bị gọi làm phiền?</h1>
   <p>Vì số điện thoại của chúng ta đã bị bán cho những kẻ bán danh sách điện thoại. Có hàng trăm kẻ như vậy. Và mỗi kẻ đó bán lại cho cả ngàn người khác. Các bạn thử dùng Google tìm "Miễn phí" "Danh sách khách hàng" sẽ thấy vô số nơi bán danh sách, những nơi đó còn cho không một vài bộ danh sách để hút khách.
