--- a/kinh-nghiem/may-tinh/toys.html
+++ b/kinh-nghiem/may-tinh/toys.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
       <h4 class="myheader"><a href='/huu-ich/dau-tu-co-phieu/'>Đầu-tư-cổ-phiếu</a></h4>
@@ -183,7 +183,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -273,7 +273,7 @@ Phần dưới đây viết trong những năm 2006-2007.</p>
 </tr>
 </tbody>
 </table>
-<p>Các phần mềm trên được cắt gọt lại cho gọn để chạy tốt trên một máy Intel Pentium 100MHz với 64MByte RAM, đĩa cứng 5GB, 2 card mạng Ethernet, không có ổ đĩa mềm, ổ CD-ROM, bàn phím, chuột, VGA card và màn hình. Server này chỉ <a href="../linh-tinh/tieu-thu-dien.html">tốn</a> có 22W điện. <br />
+<p>Các phần mềm trên được cắt gọt lại cho gọn để chạy tốt trên một máy Intel Pentium 100MHz với 64MByte RAM, đĩa cứng 5GB, 2 card mạng Ethernet, không có ổ đĩa mềm, ổ CD-ROM, bàn phím, chuột, VGA card và màn hình. Server này chỉ <a href="../linh-tinh/tieu-thu-dien">tốn</a> có 22W điện. <br />
 Hệ thống được nối mạng bằng một ADSL PPPoE bridge ZyXel và một modem voice V90 Acorp.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -348,7 +348,7 @@ data-ad-slot="3830899615">
 <dl><dt><b>Web browser</dt>
 <dd>Firefox</dd>
 <dt><b>Sổ kế toán cá nhân</dt>
-<dd><a href="gnucash.html">GnuCash</a></dd>
+<dd><a href="gnucash">GnuCash</a></dd>
 </dl>
 </td>
 <td>
@@ -364,7 +364,7 @@ data-ad-slot="3830899615">
 <p>Máy desktop được gắn card AGP 8x nVidia GeForce FX5500 có các đầu ra VGA, DVI, SVIDEO. Thêm một cái DVI-VGA adapter, tôi gắn 2 màn hình VGA vào máy desktop. Gắn thêm keyboard, mouse và audio USB vào, phần mềm <a href="https://userful.com/products/free-2-user-license" target="_blank">Desktop Multiplier</a> làm cho tôi và con gái có thể dùng máy cùng một lúc. Mỗi người có đủ một bộ màn hình, bàn phím, chuột, một người dùng loa, một người dùng headphone. Hai người cùng đọc web, xem TV, nghe nhạc, soạn tài liệu… vẫn còn dư sức cho CPU chạy BOINC. Trong máy Linux có thể chạy một máy ảo VMware là Windows. Hình chụp ở cuối trang.</p>
 <p>Linux nhìn thấy CPU Pentium 4 Hyperthread như 2 CPU, nếu có hai hay nhiều process cần dùng CPU mà CPU đang tạm thời không thể xử lý tiếp lệnh của process đang chạy (có nhiều lý do, ví dụ như gặp lệnh rẽ nhánh đến 1 đoạn code không có sẵn trong cache) thì nó sẽ đưa process khác vào làm. Thực ra thì 1 CPU hyperthread không thể làm nhiều việc như 2 CPU thật. Khi tôi chạy chương trình encode video gồm 4 process pipe với nhau; nhờ máy có nhiều RAM nên CPU không phải chờ đọc ghi đĩa, 4 process đó cần rất nhiều khả năng tính toán của CPU, trung bình có hơn 2,5 process chờ làm việc mà CPU chỉ bận rộn khoảng chừng 120-140%.</p>
 <h4>Máy tính bận rộn suốt ngày</h4>
-<p>CPU Pentium không có khả năng tiết kiệm điện bằng cách tự <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/nhiet-do">thay đổi tần số</a>. Như vậy, dù có việc làm hay đang ở không, nó cũng <a href="../linh-tinh/tieu-thu-dien.html">tốn điện</a> như nhau. Để khỏi phí lượng điện tốn cho server này, tôi cho nó chạy <a href="https://setiathome.berkeley.edu/" target='_blank'>SETI@home</a>. SETI@home là chương trình ít đòi hỏi nhất trong số các chương trình <a href="https://boinc.berkeley.edu/" target='_blank'>BOINC</a>. Máy server này không đủ sức chạy các chương trình BOINC khác. Bây giờ thì CPU của server này luôn luôn dùng hết khả năng của nó.</p>
+<p>CPU Pentium không có khả năng tiết kiệm điện bằng cách tự <a href="https://lhboi.name.vn/kinh-nghiem/may-tinh/nhiet-do">thay đổi tần số</a>. Như vậy, dù có việc làm hay đang ở không, nó cũng <a href="../linh-tinh/tieu-thu-dien">tốn điện</a> như nhau. Để khỏi phí lượng điện tốn cho server này, tôi cho nó chạy <a href="https://setiathome.berkeley.edu/" target='_blank'>SETI@home</a>. SETI@home là chương trình ít đòi hỏi nhất trong số các chương trình <a href="https://boinc.berkeley.edu/" target='_blank'>BOINC</a>. Máy server này không đủ sức chạy các chương trình BOINC khác. Bây giờ thì CPU của server này luôn luôn dùng hết khả năng của nó.</p>
 <p>Để tận dụng máy desktop, tôi cho nó chạy chương trình <a href="https://www.worldcommunitygrid.org/" target="_blank">FightAIDS@home</a> trong số các chương trình BOINC.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
